# demo-hub

./: .gitignore  README.md
cty-cli/: .env.example  .gitignore  README.md  agent.py  config.py  context.py  cty-cli  cty-cli.bat  main.py  memory.py  permissions.py  plan.py  pyproject.toml  requirements.txt  security.py  skills.py  tools.py  trace.py  ui.py
cty-cli/.github/workflows/: ci.yml
cty-cli/docs/: architecture.md  demo.md  memory.md  security.md  troubleshooting.md
cty-cli/docs/images/: .gitkeep
cty-cli/docs/videos/: .gitkeep
cty-cli/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
cty-cli/scripts/: smoke_test.ps1  smoke_test.sh
cty-cli/tests/: __init__.py  conftest.py  test_agent_loop.py  test_config.py  test_context.py  test_memory.py  test_permissions.py  test_security.py  test_tools.py
docs/: index.html
docs/platform/: index.html
docs/rag/: index.html
docs/workflow/: index.html
dream-rag/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE.md  PROJECT_SCOPE.md  README.md  deploy-front.sh  infra.sh  launch.sh.example  pom.xml
dream-rag/docs/: docker-compose.yaml  migrate-minio-files.sh  nginx.conf
dream-rag/frontend/: package.json
dream-rag/scripts/: chat-reconnect-smoke-test.mjs
zhimeng-ai-workflow/: .env.example  .gitignore  LICENSE  NOTICE.md  PROJECT_SCOPE.md  README.md
zhimeng-ai-workflow/console/: README.md
zhimeng-ai-workflow/core-workflow-java/: Dockerfile  README.md  pom.xml
zhimeng-ai-workflow/scripts/: check-minio.sh  export-mysql-schema.sh  fix-local-mysql-charset.sh  (+3 more)
(+1491 files in other folders)
