[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cty-cli"
version = "0.1.0"
description = "A minimalist Claude Code-style coding agent for the terminal"
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["main", "agent", "config", "context", "memory", "permissions", "plan", "security", "skills", "tools", "trace", "ui"]

[tool.setuptools.packages.find]
include = ["providers*"]

[project.scripts]
cty-cli = "main:main"
